# topomux

./: .gitlab-ci.yml  Makefile  README.md  bittware_env.sh  env.sh  pyproject.toml  xilinx_env.sh
src/topomux/: __init__.py  __main__.py  cli.py  topologies.py
src/topomux/backends/: emulation.py  hardware.py
topologies/: bittware_adjacent.topo  bittware_different.topo  bittware_loopback.topo  bittware_pair.topo  xilinx_loopback.topo  xilinx_pair.topo  xilinx_ring.topo
